add prepare script

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "build:bundle": "webpack --mode=production --config config/webpack.config.cjs",
     "test": "jest --colors --passWithNoTests --coverage",
     "test:watch": "jest --colors --passWithNoTests --watch",
-    "prettier": "prettier --write \"**/*.{js,json,md,sol,ts,yml}\""
+    "prettier": "prettier --write \"**/*.{js,json,md,sol,ts,yml}\"",
+    "prepare": "npm run build"
   },
   "repository": {
     "type": "git",
