Big Refactor of most of the code; not done yet.
TL;DR

Trying to move to a `async FhenixClient.Create()` instead of requiring the user to manually init fhevm

Removed keypairs and replaced with Permits

Added SealingKey type that wraps the libsodium stuff for less coupling

Unseal now returns bigint, so one day when we move to larger integer we don't have to break interfaces

Tried to change directory structure a bit to make things seem a bit less magical

Moved tests to tests/ folder

Changed github actions a bit

Added some prettier configs

More to come!

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "compilerOptions": {
     "noEmit": false,
-    "rootDir": "src",
+    "rootDir": ".",
     "outDir": "bundle",
     "declaration": false,
-    "target": "ES5",
-    "lib": ["es5", "DOM"],
+    "target": "ES6",
+    "lib": ["ES6", "DOM"],
     "module": "commonjs",
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -18,5 +18,5 @@
     }
   },
   "include": ["src", "types"],
-  "exclude": ["node_modules", "src/*.test.ts"]
+  "exclude": ["node_modules", "src/*.test.ts", "test"],
 }
