--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,23 +1,44 @@
-name: PR test
+name: Run Tests
 
-on:
-  pull_request:
-    branches:
-      - main
+on: [push, pull_request]
+
 jobs:
-  build:
+
+  test:
     runs-on: ubuntu-latest
+
+    services:
+      secret:
+        image: ghcr.io/fhenixprotocol/fhenix-node-dev:v0.0.7-standalone
+        ports:
+          - 8545:8547 # RPC
+          - 5000:3000 # Faucet
 
     strategy:
       matrix:
-        node-version: [18.x]
+        node-version: [18.x, 20.x]
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
-      - run: npm ci
-      - run: npm test
-      - run: npm run build
-      - uses: ArtiomTr/jest-coverage-report-action@v2
+          node-version: 20.x
+      - name: Install Dependencies
+        run: npm ci
+      - name: Run Tests
+        run: npm test
+      - name: Run ESLint
+        run: eslint . --ext .js,.jsx,.ts,.tsx
+
+  build:
+    runs-on: ubuntu-latest
+    steps:
+     - uses: actions/checkout@v4
+     - name: Use Node.js ${{ matrix.node-version }}
+       uses: actions/setup-node@v3
+       with:
+         node-version: ${{ matrix.node-version }}
+     - name: Build Package
+       run: npm run build
+     - name: Test Browser
+       run: npm run test-browser
