--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fhenix.js",
   "version": "0.2.1",
-  "description": "fhEVM SDK for blockchain using TFHE",
+  "description": "The JavaScript SDK for Fhenix",
   "main": "lib/node.cjs",
   "types": "lib/node.d.ts",
   "browser": "lib/web.js",
@@ -24,10 +24,12 @@
     "build": "npm run build:lib && npm run build:bundle",
     "build:lib": "rollup -c config/rollup.config.js",
     "build:bundle": "webpack --mode=production --config config/webpack.config.cjs",
-    "test": "jest --colors --passWithNoTests --coverage",
+    "test": "jest --colors --passWithNoTests --detectOpenHandles",
+    "test-ci": "jest --forceExit --runInBand",
     "test:watch": "jest --colors --passWithNoTests --watch",
-    "prettier": "prettier --write \"**/*.{js,json,md,sol,ts,yml}\"",
-    "prepare": "npm run build"
+    "test-browser": "web-test-runner \"test-browser/**/*.test.js\" --node-resolve --puppeteer",
+    "coverage": "jest --passWithNoTests --coverage",
+    "prettier": "prettier --write \"**/*.{js,json,md,sol,ts,yml}\""
   },
   "repository": {
     "type": "git",
@@ -40,8 +42,10 @@
   },
   "homepage": "https://github.com/FhenixProtocol/fhenix.js#readme",
   "dependencies": {
+    "@sindresorhus/is": "^6.1.0",
+    "big-integer": "^1.6.52",
     "commander": "^11.0.0",
-    "crypto-js": "^4.1.1",
+    "crypto-js": "^4.2.0",
     "ethers": "^6.6.4",
     "libsodium": "^0.7.11",
     "libsodium-wrappers": "^0.7.11",
@@ -50,6 +54,7 @@
     "tfhe": "^0.3.1"
   },
   "devDependencies": {
+    "@esm-bundle/chai": "^4.3.4-fix.0",
     "@rollup/plugin-alias": "^5.0.0",
     "@rollup/plugin-commonjs": "^25.0.0",
     "@rollup/plugin-node-resolve": "^15.1.0",
@@ -58,6 +63,8 @@
     "@rollup/plugin-wasm": "^6.1.3",
     "@types/jest": "^29.5.1",
     "@types/libsodium-wrappers": "^0.7.10",
+    "@web/test-runner": "^0.18.0",
+    "@web/test-runner-puppeteer": "^0.15.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
     "jest": "^29.5.0",
@@ -70,8 +77,11 @@
     "to-array-buffer": "^3.2.0",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.6",
     "tslib": "^2.5.3",
+    "typedoc": "0.25.4",
+    "typedoc-plugin-extras": "3.0.0",
     "url-loader": "^4.1.1",
     "webpack": "^5.82.1",
     "webpack-cli": "^5.1.1",
