--- a/package.json
+++ b/package.json
@@ -2,28 +2,22 @@
   "name": "fhenix.js",
   "version": "0.2.1",
   "description": "The JavaScript SDK for Fhenix",
-  "main": "lib/node.cjs",
-  "types": "lib/node.d.ts",
-  "browser": "lib/web.js",
-  "type": "module",
-  "bin": {
-    "fhevm": "./bin/fhevm.js"
-  },
-  "exports": {
-    ".": {
-      "import": "./lib/web.js",
-      "require": "./lib/node.cjs"
-    },
-    "./web": {
-      "import": "./lib/web.js",
-      "require": "./lib/web.js"
-    }
-  },
+  "types": "dist/index.d.ts",
+  "main": "dist/index.js",
+  "browser": "dist/browser.js",
+  "files": [
+    "dist",
+    "src",
+    "package.json",
+    "package-lock.json",
+    "README.md",
+    "LICENSE",
+    "LICENSE.cosmjs"
+  ],
   "scripts": {
     "lint": "eslint src/",
-    "build": "npm run build:lib && npm run build:bundle",
-    "build:lib": "rollup -c config/rollup.config.js",
-    "build:bundle": "webpack --mode=production --config config/webpack.config.cjs",
+    "build": "rm -rf ./dist && webpack && tsc",
+    "serve": "webpack serve",
     "test": "jest --colors --passWithNoTests --detectOpenHandles",
     "test-ci": "jest --forceExit --runInBand",
     "test:watch": "jest --colors --passWithNoTests --watch",
@@ -63,12 +57,14 @@
     "@rollup/plugin-wasm": "^6.1.3",
     "@types/jest": "^29.5.1",
     "@types/libsodium-wrappers": "^0.7.10",
+    "@wasm-tool/wasm-pack-plugin": "^1.7.0",
     "@web/test-runner": "^0.18.0",
     "@web/test-runner-puppeteer": "^0.15.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
     "jest": "^29.5.0",
     "jest-raw-loader": "^1.0.1",
+    "node-polyfill-webpack-plugin": "^3.0.0",
     "path-browserify": "^1.0.1",
     "prettier": "^3.0.0",
     "rollup-plugin-node-builtins": "^2.0.0",
@@ -83,8 +79,11 @@
     "typedoc": "0.25.4",
     "typedoc-plugin-extras": "3.0.0",
     "url-loader": "^4.1.1",
-    "webpack": "^5.82.1",
-    "webpack-cli": "^5.1.1",
-    "webpack-merge": "^5.9.0"
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-merge": "^5.10.0",
+    "html-webpack-plugin": "^5.6.0",
+    "text-encoding": "^0.7.0",
+    "webpack-dev-server": "^4.15.1"
   }
 }
