--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,21 +16,24 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18.x, 20.x]
+        node-version: [20.x]
     steps:
       - uses: actions/checkout@v4
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: 20.x
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
       - name: Install Dependencies
-        run: npm ci
+        run: pnpm install
       - name: Run Tests
-        run: npm test
-      - name: Run ESLint
-        run: eslint . --ext .js,.jsx,.ts,.tsx
+        run: pnpm test
+#      - name: Run ESLint
+#        run: eslint . --ext .js,.jsx,.ts,.tsx
 
-  build:
+  test-build:
     runs-on: ubuntu-latest
     steps:
      - uses: actions/checkout@v4
@@ -38,7 +41,10 @@ jobs:
        uses: actions/setup-node@v3
        with:
          node-version: ${{ matrix.node-version }}
-     - name: Build Package
-       run: npm run build
-     - name: Test Browser
-       run: npm run test-browser
+     - uses: pnpm/action-setup@v2
+       with:
+         version: 8
+     - name: Install Dependencies
+       run: pnpm install
+     - name: Test Build
+       run: pnpm build:dev
