--- a/package.json
+++ b/package.json
@@ -8,21 +8,22 @@
   "files": [
     "dist",
     "src",
+    "licenses",
     "package.json",
     "package-lock.json",
     "README.md",
-    "LICENSE",
-    "LICENSE.cosmjs"
+    "LICENSE"
   ],
   "scripts": {
     "lint": "eslint src/",
-    "build": "rm -rf ./dist && webpack && tsc",
+    "build:prod": "webpack --config webpack/webpack.production.js",
+    "build:dev": "webpack --config webpack/webpack.development.js --profile --json > stats.json",
     "serve": "webpack serve",
-    "test": "jest --colors --passWithNoTests --detectOpenHandles",
+    "test": "vitest",
     "test-ci": "jest --forceExit --runInBand",
     "test:watch": "jest --colors --passWithNoTests --watch",
     "test-browser": "web-test-runner \"test-browser/**/*.test.js\" --node-resolve --puppeteer",
-    "coverage": "jest --passWithNoTests --coverage",
+    "coverage": "vitest run --coverage",
     "prettier": "prettier --write \"**/*.{js,json,md,sol,ts,yml}\""
   },
   "repository": {
@@ -37,53 +38,32 @@
   "homepage": "https://github.com/FhenixProtocol/fhenix.js#readme",
   "dependencies": {
     "@sindresorhus/is": "^6.1.0",
-    "big-integer": "^1.6.52",
-    "commander": "^11.0.0",
-    "crypto-js": "^4.2.0",
-    "ethers": "^6.6.4",
+    "ethers": "^6.9.1",
     "libsodium": "^0.7.11",
     "libsodium-wrappers": "^0.7.11",
     "node-tfhe": "^0.3.1",
-    "sha3": "^2.1.4",
     "tfhe": "^0.3.1"
   },
   "devDependencies": {
     "@esm-bundle/chai": "^4.3.4-fix.0",
-    "@rollup/plugin-alias": "^5.0.0",
-    "@rollup/plugin-commonjs": "^25.0.0",
-    "@rollup/plugin-node-resolve": "^15.1.0",
-    "@rollup/plugin-replace": "^5.0.2",
-    "@rollup/plugin-typescript": "^11.1.1",
-    "@rollup/plugin-wasm": "^6.1.3",
-    "@types/jest": "^29.5.1",
     "@types/libsodium-wrappers": "^0.7.10",
-    "@wasm-tool/wasm-pack-plugin": "^1.7.0",
-    "@web/test-runner": "^0.18.0",
-    "@web/test-runner-puppeteer": "^0.15.0",
-    "buffer": "^6.0.3",
-    "crypto-browserify": "^3.12.0",
-    "jest": "^29.5.0",
-    "jest-raw-loader": "^1.0.1",
+    "@types/node": "^18.11.3",
+    "@vitest/coverage-istanbul": "^1.1.0",
+    "@vitest/coverage-v8": "^1.1.0",
+    "compression-webpack-plugin": "^10.0.0",
     "node-polyfill-webpack-plugin": "^3.0.0",
-    "path-browserify": "^1.0.1",
     "prettier": "^3.0.0",
-    "rollup-plugin-node-builtins": "^2.0.0",
-    "rollup-plugin-polyfill-node": "^0.12.0",
-    "stream-browserify": "^3.0.0",
-    "to-array-buffer": "^3.2.0",
-    "ts-jest": "^29.1.0",
-    "ts-loader": "^9.4.2",
+    "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
-    "tsc-alias": "^1.8.6",
-    "tslib": "^2.5.3",
-    "typedoc": "0.25.4",
-    "typedoc-plugin-extras": "3.0.0",
+    "typedoc": "^0.25.4",
+    "typedoc-plugin-extras": "^3.0.0",
+    "typescript": "^5.3.3",
     "url-loader": "^4.1.1",
+    "vite": "^5.0.10",
+    "vitest": "^1.1.0",
     "webpack": "^5.89.0",
+    "webpack-bundle-analyzer": "^4.10.1",
     "webpack-cli": "^5.1.4",
-    "webpack-merge": "^5.10.0",
-    "html-webpack-plugin": "^5.6.0",
-    "text-encoding": "^0.7.0",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-merge": "^5.10.0"
   }
 }
