--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,16 +13,17 @@ jobs:
         ports:
           - 8545:8547 # RPC
           - 5000:3000 # Faucet
-
+    env:
+        SKIP_LOCAL_ENV: "true"
     strategy:
       matrix:
-        node-version: [20.x]
+        node-version: [20.x, 18.x]
     steps:
       - uses: actions/checkout@v4
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
-          node-version: 20.x
+          node-version: ${{ matrix.node-version }}
       - uses: pnpm/action-setup@v2
         with:
           version: 8
