Changed sealing to match metamask/make it a struct which is a bit more flexible

--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
   "dependencies": {
     "@sindresorhus/is": "^6.1.0",
     "ethers": "^6.9.1",
-    "libsodium": "^0.7.11",
-    "libsodium-wrappers": "^0.7.11",
+    "tweetnacl": "^1.0.3",
+    "tweetnacl-util": "^0.15.1",
     "node-tfhe": "^0.3.1",
     "tfhe": "^0.3.1"
   },
