Removed annoying assert dependency Clean up type generation & webpack

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "fhenix.js",
+  "name": "fhenixjs",
   "version": "0.2.1",
   "description": "The JavaScript SDK for Fhenix",
-  "types": "dist/index.d.ts",
+  "types": "dist/types/index.d.ts",
   "main": "dist/index.js",
   "browser": "dist/browser.js",
   "files": [
@@ -16,8 +16,8 @@
   ],
   "scripts": {
     "lint": "eslint src/",
-    "build:prod": "webpack --config webpack/webpack.production.js",
-    "build:dev": "webpack --config webpack/webpack.development.js --profile --json > stats.json",
+    "build:prod": "webpack --config webpack/webpack.production.js && tsc",
+    "build:dev": "webpack --config webpack/webpack.development.js --profile --json > stats.json && tsc",
     "serve": "webpack serve",
     "test": "VITE_CJS_IGNORE_WARNING=true vitest",
     "coverage": "VITE_CJS_IGNORE_WARNING=true vitest run --coverage",
@@ -34,7 +34,6 @@
   },
   "homepage": "https://github.com/FhenixProtocol/fhenix.js#readme",
   "dependencies": {
-    "@sindresorhus/is": "^6.1.0",
     "ethers": "^6.9.1",
     "tweetnacl": "^1.0.3",
     "tweetnacl-util": "^0.15.1",
@@ -43,9 +42,7 @@
   },
   "devDependencies": {
     "@esm-bundle/chai": "^4.3.4-fix.0",
-    "@types/libsodium-wrappers": "^0.7.10",
     "@types/node": "^18.11.3",
-    "@vitest/coverage-istanbul": "^1.1.0",
     "@vitest/coverage-v8": "^1.1.0",
     "compression-webpack-plugin": "^10.0.0",
     "node-polyfill-webpack-plugin": "^3.0.0",
