--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,19 @@
 {
   "compilerOptions": {
-    "outDir": "./dist",
-    "declaration": true,
-    "declarationMap": true,
-    "sourceMap": true,
-    "target": "es6",
+    "target": "ES6",
     "lib": ["ES6", "DOM"],
     "module": "commonjs",
-    "skipLibCheck": true,
+    "outDir": "dist",
+    "declaration": true,
+    "declarationMap": true,
+    "declarationDir": "./dist/types",
+    "sourceMap": true,
+    "baseUrl": "src",
     "esModuleInterop": true,
+    "useUnknownInCatchVariables": false,
     "strict": true,
-    "resolveJsonModule": true,
+    "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "allowJs": true,
   },
-  "exclude": ["node_modules", "dist", "test", "**/*.wasm", "test-browser"],
+  "exclude": ["node_modules", "dist", "test", "**/*.wasm", "test-browser", "webpack", "coverage", "vite**"],
 }
