--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "@vitest/coverage-v8": "^1.1.0",
     "compression-webpack-plugin": "^10.0.0",
     "node-polyfill-webpack-plugin": "^3.0.0",
+    "eslint": "^8.20.0",
+    "@typescript-eslint/eslint-plugin": "^6.17.0",
     "prettier": "^3.0.0",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
