--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,7 +1,7 @@
+name: Publish Package to npmjs
 on:
   release:
-    types: [created]
-
+    types: [published]
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -14,8 +14,6 @@ jobs:
         with:
           version: 8
       - run: pnpm install
-      - run: pnpm test
-      - run: pnpm build:prod
-      - uses: JS-DevTools/npm-publish@0f451a94170d1699fd50710966d48fb26194d939
-        with:
-          token: ${{ secrets.NPM_TOKEN }}
+      - run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
