--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,7 +1,8 @@
 name: Publish Package to npmjs
-on:
-  release:
-    types: [published]
+on: push
+# on:
+#   release:
+#     types: [published]
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -14,6 +15,6 @@ jobs:
         with:
           version: 8
       - run: pnpm install
-      - run: npm publish
+      - run: pnpm publish --dry-run
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
