--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,11 +3,10 @@ name: Run Tests
 on:
   push:
     paths-ignore:
-      - 'README.md'
-      - 'LICENSE'
+      - "README.md"
+      - "LICENSE"
 
 jobs:
-
   test:
     runs-on: ubuntu-latest
 
@@ -18,7 +17,7 @@ jobs:
           - 8545:8547 # RPC
           - 5000:3000 # Faucet
     env:
-        SKIP_LOCAL_ENV: "true"
+      SKIP_LOCAL_ENV: "true"
     strategy:
       matrix:
         node-version: [20.x, 18.x]
@@ -37,19 +36,21 @@ jobs:
         run: pnpm test
       - name: Run ESLint
         run: pnpm lint
+      - name: Run prettier
+        run: pnpm prettier-ci
 
   test-build:
     runs-on: ubuntu-latest
     steps:
-     - uses: actions/checkout@v4
-     - name: Use Node.js ${{ matrix.node-version }}
-       uses: actions/setup-node@v3
-       with:
-         node-version: ${{ matrix.node-version }}
-     - uses: pnpm/action-setup@v2
-       with:
-         version: 8
-     - name: Install Dependencies
-       run: pnpm install
-     - name: Test Build
-       run: pnpm build:dev
+      - uses: actions/checkout@v4
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
+      - name: Install Dependencies
+        run: pnpm install
+      - name: Test Build
+        run: pnpm build:dev
