--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,16 @@
     "useUnknownInCatchVariables": false,
     "strict": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
+    "forceConsistentCasingInFileNames": true
   },
-  "exclude": ["node_modules", "dist", "test", "**/*.wasm", "test-browser", "webpack", "coverage", "vite**"],
+  "exclude": [
+    "node_modules",
+    "dist",
+    "test",
+    "**/*.wasm",
+    "test-browser",
+    "webpack",
+    "coverage",
+    "vite**"
+  ]
 }
