--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -22,9 +22,9 @@ jobs:
       # Generate your TypeDoc documentation
       - run: pnpm typedoc
       # https://github.com/actions/upload-pages-artifact
-      - uses: actions/upload-pages-artifact@v2
+      - uses: actions/upload-pages-artifact@v4
         with:
-          path: ./docs # This should be your TypeDoc "out" path.
+          path: ./docs/ # This should be your TypeDoc "out" path.
   deploy:
     runs-on: ubuntu-latest
     environment:
@@ -35,4 +35,4 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         # https://github.com/actions/deploy-pages
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v4
