Added support for boolean types, initial scaffolding for higher bit-length numbers

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,4 +19,4 @@ jobs:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
       - run: pnpm install
       - run: pnpm build:prod
-      - run: pnpm publish --no-git-checks
+      - run: pnpm publish --no-git-checks --tag beta
