--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fhenixjs",
-  "version": "0.1.1",
+  "version": "0.2.0-beta.0",
   "description": "The JavaScript SDK for Fhenix",
   "types": "dist/types/index.d.ts",
   "main": "dist/index.node.js",
