--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,6 @@
     "strictNullChecks": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "skipLibCheck": true,
+    "skipLibCheck": true
   }
 }
