--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,9 +32,11 @@ jobs:
           version: 8
       - name: Install Dependencies
         run: pnpm install
+      - name: Build Package
+        run: pnpm build
       - name: Run Tests
         # wait for localfhenix to start
-        run: sleep 5 && pnpm test
+        run: sleep 10 && pnpm test
       - name: Run ESLint
         run: pnpm lint
       - name: Run prettier
