--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "build-rollup": "rollup -c",
     "dev-rollup": "rollup -c -w",
     "lint": "eslint src/",
-    "compile": "tsc -p tsconfig.cjs.json && tsc -p tsconfig.esm.json && tsc -p tsconfig.types.json",
+    "compile": "tsc -p tsconfig.cjs.json && tsc -p tsconfig.esm.json",
     "build": "pnpm compile && pnpm build-rollup && uglifyjs ./dist/fhenix.esm.js -o ./dist/fhenix.esm.min.js && uglifyjs ./dist/fhenix.umd.js -o ./dist/fhenix.umd.min.js",
     "test": "VITE_CJS_IGNORE_WARNING=true vitest ",
     "coverage": "VITE_CJS_IGNORE_WARNING=true vitest run --coverage",
