--- a/package.json
+++ b/package.json
@@ -69,7 +69,8 @@
     "vite": "5.0.10",
     "vite-plugin-wasm": "3.3.0",
     "vite-plugin-top-level-await": "1.4.1",
-    "vitest": "1.6.0"
+    "vitest": "1.6.0",
+    "ethers": "^6.9.1"
   },
   "sideEffects": false
 }
