--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,7 @@
 name: Run Tests
 
 on:
+  workflow_dispatch:
   push:
     paths-ignore:
       - "README.md"
@@ -10,14 +11,9 @@ jobs:
   test:
     runs-on: ubuntu-latest-m
 
-    services:
-      fhenix:
-        image: ghcr.io/fhenixprotocol/localfhenix:v0.2.3
-        ports:
-          - 8545:8547 # RPC
-          - 5000:3000 # Faucet
     env:
       SKIP_LOCAL_ENV: "true"
+      REGISTRY: ghcr.io/fhenixprotocol/nitro
     strategy:
       matrix:
         node-version: [20.x, 22.x]
@@ -34,6 +30,15 @@ jobs:
         run: pnpm install
       - name: Build Package
         run: pnpm build
+      - name: Docker Login
+        uses: docker/login-action@v3.0.0
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GH_PAT }}
+      - name: Run localfhenix
+        run: |
+          docker run -p 8545:8547 -p 8548:8548 -p 5000:3000 -e FHEOS_SECURITY_ZONES=2 ghcr.io/fhenixprotocol/nitro/localfhenix:v0.3.0-rc.0 &
       - name: Run Tests
         # wait for localfhenix to start
         run: sleep 10 && pnpm test
