--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -7,12 +7,6 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
-    services:
-      secret:
-        image: ghcr.io/fhenixprotocol/localfhenix:v0.2.3
-        ports:
-          - 8545:8547 # RPC
-          - 5000:3000 # Faucet
     permissions:
       contents: read
       packages: read
@@ -31,6 +25,15 @@ jobs:
           version: 8
       - name: "Install Deps"
         run: pnpm install
+      - name: Docker Login
+        uses: docker/login-action@v3.0.0
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GH_PAT }}
+      - name: Run localfhenix
+        run: |
+          docker run -p 8545:8547 -p 8548:8548 -p 5000:3000 -e FHEOS_SECURITY_ZONES=2 ghcr.io/fhenixprotocol/nitro/localfhenix:latest &
       - name: "Test with Coverage"
         run: pnpm coverage
       - name: "Report Coverage"
