--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -14,6 +14,7 @@ jobs:
       pull-requests: write
     env:
       SKIP_LOCAL_ENV: "true"
+      REGISTRY: ghcr.io/fhenixprotocol/nitro
     steps:
       - uses: actions/checkout@v4
       - name: "Install Node"
