--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,13 +12,17 @@ jobs:
     runs-on: ubuntu-latest-m
 
     services:
-      registry: ${{ env.REGISTRY }}
-      username: ${{ github.actor }}
-      password: ${{ secrets.GH_PAT }}
+      fhenix:
+        image: ghcr.io/fhenixprotocol/nitro/localfhenix:latest
+        ports:
+          - 8545:8547 # RPC
+          - 5000:3000 # Faucet
+        credentials:
+            username: ${{ github.actor }}
+            password: ${{ secrets.GH_PAT }}
 
     env:
       SKIP_LOCAL_ENV: "true"
-      REGISTRY: ghcr.io/fhenixprotocol/nitro
       FHEOS_SECURITY_ZONES: 2
     strategy:
       matrix:
@@ -36,12 +40,9 @@ jobs:
         run: pnpm install
       - name: Build Package
         run: pnpm build
-      - name: Docker Login
-        uses: docker/login-action@v3.0.0
-        with:
       - name: Run Tests
         # wait for localfhenix to start
-        run: sleep 20 && pnpm test
+        run: sleep 10 && pnpm test
       - name: Run ESLint
         run: pnpm lint
       - name: Run prettier
