restoring services entry becuase there's a connection issue right now for some reason

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,9 +17,11 @@ jobs:
         ports:
           - 8545:8547 # RPC
           - 5000:3000 # Faucet
+        env:
+          FHEOS_SECURITY_ZONES: 2
         credentials:
-            username: ${{ github.actor }}
-            password: ${{ secrets.GH_PAT }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GH_PAT }}
 
     env:
       SKIP_LOCAL_ENV: "true"
