--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -7,6 +7,18 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
+    services:
+      fhenix:
+        image: ghcr.io/fhenixprotocol/nitro/localfhenix:latest
+        ports:
+          - 8545:8547 # RPC
+          - 5000:3000 # Faucet
+        env:
+          FHEOS_SECURITY_ZONES: 2
+        credentials:
+          username: ${{ github.actor }}
+          password: ${{ secrets.GH_PAT }}
+
     permissions:
       contents: read
       packages: read
@@ -26,15 +38,6 @@ jobs:
           version: 8
       - name: "Install Deps"
         run: pnpm install
-      - name: Docker Login
-        uses: docker/login-action@v3.0.0
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GH_PAT }}
-      - name: Run localfhenix
-        run: |
-          docker run -p 8545:8547 -p 8548:8548 -p 5000:3000 -e FHEOS_SECURITY_ZONES=2 ghcr.io/fhenixprotocol/nitro/localfhenix:latest &
       - name: "Test with Coverage"
         run: pnpm coverage
       - name: "Report Coverage"
