--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "dev-rollup": "rollup -c -w",
     "lint": "eslint src/",
     "compile": "tsc -p tsconfig.cjs.json && tsc -p tsconfig.esm.json",
-    "build": "pnpm compile && pnpm build-rollup && uglifyjs ./dist/fhenix.esm.js -o ./dist/fhenix.esm.min.js && uglifyjs ./dist/fhenix.umd.js -o ./dist/fhenix.umd.min.js",
+    "build": "pnpm _hack-backup-cjs && pnpm compile && pnpm build-rollup && uglifyjs ./dist/fhenix.esm.js -o ./dist/fhenix.esm.min.js && uglifyjs ./dist/fhenix.umd.js -o ./dist/fhenix.umd.min.js && pnpm _hack-restore-cjs",
     "test": "VITE_CJS_IGNORE_WARNING=true vitest ",
     "coverage": "VITE_CJS_IGNORE_WARNING=true vitest run --coverage",
+    "_hack-backup-cjs": "cp ./lib/commonjs/sdk/fhe/tfhe.js . && cp ./lib/commonjs/sdk/fhe/tfhe-browser.js .",
+    "_hack-restore-cjs": "mv tfhe.js ./lib/commonjs/sdk/fhe/ && mv tfhe-browser.js ./lib/commonjs/sdk/fhe/",
     "prettier": "prettier --write \"**/*.{js,json,md,sol,ts,yml}\"",
     "prettier-ci": "prettier --check \"**/*.{js,json,md,sol,ts,yml}\""
   },
@@ -59,6 +61,7 @@
     "ethers": "6.13.1",
     "prettier": "3.2.5",
     "rollup": "4.18.0",
+    "selenium-webdriver": "^4.23.0",
     "ts-node": "10.9.2",
     "typedoc": "0.25.13",
     "typedoc-plugin-extras": "3.0.0",
