--- a/.github/workflows/test-environments.yml
+++ b/.github/workflows/test-environments.yml
@@ -30,6 +30,9 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 20
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
       - run: pnpm install
       - name: Build Environment
         run: |
