try with selenoid

--- a/.github/workflows/test-environments.yml
+++ b/.github/workflows/test-environments.yml
@@ -25,6 +25,8 @@ jobs:
         environments: [next]
 
     steps:
+      - name: Start selenoid
+        uses: Xotabu4/selenoid-github-action@v2
       - uses: actions/checkout@v2
       - name: Use Node.js 20.x
         uses: actions/setup-node@v2
