--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -22,7 +22,7 @@ jobs:
           version: 8
       - run: pnpm install
       # Generate your TypeDoc documentation
-      - run: pnpm typedoc
+      - run: pnpm typedoc --tsconfig tsconfig.esm.json
       # https://github.com/actions/upload-pages-artifact
       - uses: actions/upload-pages-artifact@v3
         with:
