--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@typescript-eslint/eslint-plugin": "7.2.0",
     "@vitest/coverage-v8": "1.1.0",
     "eslint": "8.57.0",
+    "ethers": "^6.9.1",
     "prettier": "3.2.5",
     "rollup": "4.18.0",
     "ts-node": "10.9.2",
@@ -68,10 +69,9 @@
     "typescript": "5.4.5",
     "uglify-js": "3.17.4",
     "vite": "5.0.10",
-    "vite-plugin-wasm": "3.3.0",
     "vite-plugin-top-level-await": "1.4.1",
-    "vitest": "1.6.0",
-    "ethers": "^6.9.1"
+    "vite-plugin-wasm": "3.3.0",
+    "vitest": "1.6.0"
   },
   "sideEffects": false
 }
