Compile before running coverage tests

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "compile": "tsc -p tsconfig.cjs.json && tsc -p tsconfig.esm.json",
     "build": "pnpm _hack-backup-cjs && pnpm compile && pnpm build-rollup && uglifyjs ./dist/fhenix.esm.js -o ./dist/fhenix.esm.min.js && uglifyjs ./dist/fhenix.umd.js -o ./dist/fhenix.umd.min.js && pnpm _hack-restore-cjs",
     "test": "pnpm compile && VITE_CJS_IGNORE_WARNING=true vitest ",
-    "coverage": "VITE_CJS_IGNORE_WARNING=true vitest run --coverage",
+    "coverage": "pnpm compile && VITE_CJS_IGNORE_WARNING=true vitest run --coverage",
     "_hack-backup-cjs": "cp ./lib/commonjs/sdk/fhe/tfhe.js . && cp ./lib/commonjs/sdk/fhe/tfhe-browser.js .",
     "_hack-restore-cjs": "mv tfhe.js ./lib/commonjs/sdk/fhe/ && mv tfhe-browser.js ./lib/commonjs/sdk/fhe/",
     "test-no-localfhenix": "SKIP_LOCAL_ENV=true VITE_CJS_IGNORE_WARNING=true vitest ",
