--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@vitest/coverage-v8": "1.1.0",
     "eslint": "8.57.0",
     "ethers": "^6.9.1",
+    "jsdom": "^25.0.0",
     "prettier": "3.2.5",
     "rollup": "4.18.0",
     "ts-node": "10.9.2",
