--- a/package.json
+++ b/package.json
@@ -51,8 +51,10 @@
   "homepage": "https://github.com/FhenixProtocol/fhenix.js#readme",
   "dependencies": {
     "@types/node": "^20.0.0",
+    "immer": "^10.1.1",
     "tweetnacl": "^1.0.3",
     "tweetnacl-util": "^0.15.1",
+    "zod": "^3.23.8",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
