--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -4,7 +4,7 @@
     "declarationMap": true,
     "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true,
-    "target": "es2016",
+    "target": "ES2020",
     "moduleResolution": "node",
     "newLine": "lf",
     "noFallthroughCasesInSwitch": true,
