--- a/package.json
+++ b/package.json
@@ -51,10 +51,15 @@
   "homepage": "https://github.com/FhenixProtocol/fhenix.js#readme",
   "dependencies": {
     "@types/node": "^20.0.0",
+    "immer": "^10.1.1",
     "tweetnacl": "^1.0.3",
-    "tweetnacl-util": "^0.15.1"
+    "tweetnacl-util": "^0.15.1",
+    "type-fest": "^4.26.1",
+    "zod": "^3.23.8",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
+    "happy-dom": "^15.11.6",
     "@rollup/plugin-commonjs": "25.0.8",
     "@rollup/plugin-node-resolve": "15.2.3",
     "@rollup/plugin-wasm": "6.2.2",
