--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "fhenixjs",
-  "version": "0.4.2-alpha.2",
-  "description": "The JavaScript SDK for Fhenix",
+  "name": "cofhejs",
+  "version": "0.0.1-alpha.0",
+  "description": "The JavaScript SDK for Fhenix's CoFHE Service",
   "main": "./lib/commonjs/index.js",
   "module": "./lib/esm/index.js",
   "types": "./lib/types/index.d.ts",
@@ -30,7 +30,7 @@
     "lint": "eslint src/",
     "_pure-compile": "tsc -p tsconfig.cjs.json && tsc -p tsconfig.esm.json && tsc -p tsconfig.types.json",
     "compile": "pnpm _hack-backup-cjs && pnpm _pure-compile && pnpm _hack-restore-cjs",
-    "build": "pnpm _hack-backup-cjs && pnpm _pure-compile && pnpm build-rollup && uglifyjs ./dist/fhenix.esm.js -o ./dist/fhenix.esm.min.js && uglifyjs ./dist/fhenix.umd.js -o ./dist/fhenix.umd.min.js && pnpm _hack-restore-cjs",
+    "build": "pnpm _hack-backup-cjs && pnpm _pure-compile && pnpm build-rollup && uglifyjs ./dist/cofhe.esm.js -o ./dist/cofhe.esm.min.js && uglifyjs ./dist/cofhe.umd.js -o ./dist/cofhe.umd.min.js && pnpm _hack-restore-cjs",
     "test": "pnpm compile && VITE_CJS_IGNORE_WARNING=true vitest ",
     "coverage": "pnpm compile && VITE_CJS_IGNORE_WARNING=true vitest run --coverage",
     "_hack-backup-cjs": "cp ./lib/commonjs/sdk/fhe/tfhe.js . && cp ./lib/commonjs/sdk/fhe/tfhe-browser.js .",
@@ -41,14 +41,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/FhenixProtocol/fhenix.js.git"
+    "url": "git+https://github.com/FhenixProtocol/cofhe.js.git"
   },
   "author": "FhenixProtocol",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/FhenixProtocol/fhenix.js/issues"
+    "url": "https://github.com/FhenixProtocol/cofhe.js/issues"
   },
-  "homepage": "https://github.com/FhenixProtocol/fhenix.js#readme",
+  "homepage": "https://github.com/FhenixProtocol/cofhe.js#readme",
   "dependencies": {
     "@types/node": "^20.0.0",
     "immer": "^10.1.1",
