--- a/package.json
+++ b/package.json
@@ -33,11 +33,12 @@
     "build": "pnpm _hack-backup-cjs && pnpm _pure-compile && pnpm build-rollup && uglifyjs ./dist/cofhe.esm.js -o ./dist/cofhe.esm.min.js && uglifyjs ./dist/cofhe.umd.js -o ./dist/cofhe.umd.min.js && pnpm _hack-restore-cjs",
     "test": "pnpm compile && VITE_CJS_IGNORE_WARNING=true vitest ",
     "coverage": "pnpm compile && VITE_CJS_IGNORE_WARNING=true vitest run --coverage",
-    "_hack-backup-cjs": "cp ./lib/commonjs/sdk/fhe/tfhe.js . && cp ./lib/commonjs/sdk/fhe/tfhe-browser.js .",
+    "_hack-backup-cjs": "shx cp ./lib/commonjs/sdk/fhe/tfhe.js . && shx cp ./lib/commonjs/sdk/fhe/tfhe-browser.js .",
     "_hack-restore-cjs": "mv tfhe.js ./lib/commonjs/sdk/fhe/ && mv tfhe-browser.js ./lib/commonjs/sdk/fhe/",
     "test-no-localfhenix": "SKIP_LOCAL_ENV=true VITE_CJS_IGNORE_WARNING=true vitest ",
     "prettier": "prettier --write \"**/*.{js,json,md,sol,ts,yml}\"",
-    "prettier-ci": "prettier --check \"**/*.{js,json,md,sol,ts,yml}\""
+    "prettier-ci": "prettier --check \"**/*.{js,json,md,sol,ts,yml}\"",
+    "prepare": "pnpm run build"
   },
   "repository": {
     "type": "git",
@@ -59,7 +60,6 @@
     "zustand": "^5.0.1"
   },
   "devDependencies": {
-    "happy-dom": "^15.11.6",
     "@rollup/plugin-commonjs": "25.0.8",
     "@rollup/plugin-node-resolve": "15.2.3",
     "@rollup/plugin-wasm": "6.2.2",
@@ -67,9 +67,11 @@
     "@vitest/coverage-v8": "1.1.0",
     "eslint": "8.57.0",
     "ethers": "^6.9.1",
+    "happy-dom": "^15.11.6",
     "jsdom": "^25.0.0",
     "prettier": "3.2.5",
     "rollup": "4.18.0",
+    "shx": "^0.3.4",
     "ts-node": "10.9.2",
     "typedoc": "0.25.13",
     "typedoc-plugin-extras": "3.0.0",
