Update package.json script

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "test": "pnpm compile && VITE_CJS_IGNORE_WARNING=true vitest ",
     "coverage": "pnpm compile && VITE_CJS_IGNORE_WARNING=true vitest run --coverage",
     "_hack-backup-cjs": "shx cp ./lib/commonjs/sdk/fhe/tfhe.js . && shx cp ./lib/commonjs/sdk/fhe/tfhe-browser.js .",
-    "_hack-restore-cjs": "mv tfhe.js ./lib/commonjs/sdk/fhe/ && mv tfhe-browser.js ./lib/commonjs/sdk/fhe/",
+    "_hack-restore-cjs": "shx mv tfhe.js ./lib/commonjs/sdk/fhe/ && shx mv tfhe-browser.js ./lib/commonjs/sdk/fhe/",
     "test-no-localfhenix": "SKIP_LOCAL_ENV=true VITE_CJS_IGNORE_WARNING=true vitest ",
     "prettier": "prettier --write \"**/*.{js,json,md,sol,ts,yml}\"",
     "prettier-ci": "prettier --check \"**/*.{js,json,md,sol,ts,yml}\"",
